style.css: fix image width on smaller screen devices

--- a/gen/website/style.css
+++ b/gen/website/style.css
@@ -90,9 +90,11 @@ pre {
     width: calc(100%-10px);
 }
 
-ul {
+/*ul {
     width: auto;
-}
+}*/
+
+img { max-width: 100%; }
 
 #side-bar {
     position: fixed;
@@ -156,6 +158,5 @@ a.side-bar:active, a.side-bar:hover {
     #document { padding-left: 10px; padding-right: 10px; }
     blockquote { margin-inline-start: 0px; margin-inline-end: 0px; margin-right: 0px; }
     pre { margin-inline-start: 0px; margin-inline-end: 0px; margin-left: 0px; margin-right: 0px; }
-    img { max-width: 100%; }
     #build-spec { margin-inline-start: 0px; margin-inline-end: 0px; margin-right: 0px; }
 }
